# ChangeLog for games-strategy/uqm
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/uqm/ChangeLog,v 1.23 2007/09/23 15:56:04 josejx Exp $

  23 Sep 2007; Joseph Jezak <josejx@gentoo.org> uqm-0.6.2.ebuild:
  Marked ppc64 stable.

  23 Jul 2007; Joseph Jezak <josejx@gentoo.org> uqm-0.6.2.ebuild:
  Marked ~ppc64.

  05 Apr 2007; Tristan Heaven <nyhm@gentoo.org> uqm-0.6.2.ebuild:
  Wrapper sed fix by Alex Karshakevich, bug #173485

  12 Mar 2007; Marius Mauch <genone@gentoo.org> uqm-0.5.0.ebuild,
  uqm-0.6.2.ebuild:
  Replacing einfo with elog

  08 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org> uqm-0.6.2.ebuild:
  fix dep for bug #165902

  04 Feb 2007; Simon Stelling <blubb@gentoo.org> uqm-0.6.2.ebuild:
  mark ~amd64 after minor changes; credit to Amit Kotlovski; bug 165101

*uqm-0.6.2 (26 Jan 2007)

  26 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org> +uqm-0.6.2.ebuild:
  version bump (patch from nedrandersoff@yahoo.com) - bug #158640

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> uqm-0.5.0.ebuild:
  Fixed compilation on amd64 with a patch from Lukasz Demianiuk
  <ldemianiuk@gmail.com>. Closing bug #157696.

*uqm-0.5.0 (07 Feb 2006)

  07 Feb 2006; Michael Sterrett <mr_bones_@gentoo.org> +uqm-0.5.0.ebuild:
  version bump

  29 Jan 2006; Michael Sterrett <mr_bones_@gentoo.org> uqm-0.4.0.ebuild:
  X is implicit

  06 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org> -uqm-0.3-r2.ebuild:
  clean older version

  27 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  files/digest-uqm-0.4.0, Manifest:
  Fixing diget for bug #94165.

*uqm-0.4.0 (27 May 2005)

  27 May 2005; Michael Sterrett <mr_bones_@gentoo.org> +uqm-0.4.0.ebuild:
  version bump (bug #93491) - ebuild patch from Robert Zaleski

  09 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> uqm-0.3-r2.ebuild:
  more use flag knobs to support specific content install (bug #67045) -