@@ -5,6 +5,6 @@ DIST uqm-0.6.2-source.tgz 1497342 RMD160 3f36fdc750607fddb68d52195f079e31860020a
 DIST uqm-remix-pack1.zip 50188123 RMD160 1c0cf233d6377918b676bcd591f4304b8da85aa1 SHA1 7cbdc87887ebebae5439c689fc5bd2ffa9460fc8 SHA256 1b9ccc799e531f50580952af92b342fb6684ae97b7bdc434f3b7e22d0c230644
 DIST uqm-remix-pack2.zip 60281175 RMD160 441edc71e3006e43629ee262fef8ef8676573832 SHA1 f1ebca44ff105f968d6fcf65df935926523b1c97 SHA256 1dff1792a558a52eb5cbdf24e0c1b8b7ec85aff75a00ddb403ec988607f51dd0
 DIST uqm-remix-pack3.zip 39923803 RMD160 786e8dfd7924abf6ef886e7223c1d57b0740d524 SHA1 f55d198c56a0963a6bb2f9c2fe04c4c475b25086 SHA256 4e347d52279785eba4ba5355beae63048ce3b550db3181d4d55df6a20361682d
-EBUILD uqm-0.6.2.ebuild 3616 RMD160 68402941b29c306f813c67dba768315f349d4a2f SHA1 db8adc6b593eeefcd11abe09548a51e481728ed1 SHA256 f8df95e1686e6f2d30e62f7dfa92cd785f6290d936e122b418e675bef53f2b66
-MISC ChangeLog 2988 RMD160 890697a8787862cd8d97ddf67e8712f64086aa71 SHA1 44e06c256caddbc3d694a94d55ea423e17427a7b SHA256 617a69ab254ff0658b494c3a4a84e6457fb93d9c0eabdf5993c5c9a0c6367a99
+EBUILD uqm-0.6.2.ebuild 3617 RMD160 53a40c50aba60ef2cc7d1c4d406c2ce107837126 SHA1 1341fd17df02e1f41390e05b690ff0c9a2e6d7c3 SHA256 ad3da44e380339787070cafe74e5ae5579f4ab2de01eadead0ede027b282e47c
+MISC ChangeLog 3094 RMD160 0720b3205c033a145308bdf3822442a8ae71e551 SHA1 37d41531b28ef4e6852d9067bf13ad22a3b8cb90 SHA256 7b315dbe57474bafab3160c37b82fff0e4c95b62ccf102eaaf2d99afa607b42f
 MISC metadata.xml 396 RMD160 c01dcca6e2af2a6ddfa1f57aa31169f100d1cad0 SHA1 32c39f8a30f580a5e594b6cb8ea8ec65d0db4fc6 SHA256 b6d936f701a8b3777501f3fa1c255f7aec921f1dd1cc999a2d75432ec849df16
