@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/uqm/Attic/uqm-0.6.2.ebuild,v 1.8 2007/09/23 15:56:04 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/uqm/Attic/uqm-0.6.2.ebuild,v 1.9 2008/08/11 19:17:09 coldwind Exp $
 
 inherit eutils multilib games
 
@@ -16,7 +16,7 @@ SRC_URI="mirror://sourceforge/sc2/${P}-source.tgz
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ppc ppc64 x86"
+KEYWORDS="amd64 ppc ppc64 x86"
 IUSE="music opengl remix voice"
 
 RDEPEND="media-libs/libvorbis
