@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/uqm
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/uqm/ChangeLog,v 1.23 2007/09/23 15:56:04 josejx Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/uqm/ChangeLog,v 1.24 2008/08/11 19:17:09 coldwind Exp $
+
+  11 Aug 2008; Santiago M. Mola <coldwind@gentoo.org> uqm-0.6.2.ebuild:
+  amd64 stable wrt bug #234465
 
   23 Sep 2007; Joseph Jezak <josejx@gentoo.org> uqm-0.6.2.ebuild:
   Marked ppc64 stable.
